--- a/scss/main1.scss
+++ b/scss/main1.scss
@@ -3,3 +3,42 @@
 @import "structure/menu-logo-HEADER";
 @import "structure/statistics";
 @import "structure/opening";
+@import "generic/reset";
+@import "structure/buttons";
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: $font1;
+}
+
+a {
+  text-decoration: none;
+}
+
+h2 {
+  font-family: $font2;
+  font-size: 2.25rem;
+}
+
+.container {
+  width: 1352px;
+  margin: 0 auto;
+
+  @include notebook {
+    width: 100%;
+    padding: 0 15px;
+  }
+}
+
+
+.logo {
+  font-family: $font2;
+  font-size: 3rem;
+  font-weight: 400;
+  color: $primaryColor;
+}
+$button-radius: 35px;
