--- a/scss/seetings/_fonts-colors-icons.scss
+++ b/scss/seetings/_fonts-colors-icons.scss
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
+
+
 $primaryColor: #ff00ae;
 $Background: #bb8c8c;
-$MenuColor: rgba(255, 0, 89, 0.2);
+$MenuColor: rgba(255, 0, 89, 0.85);
 $Border1: rgba(221, 0, 255, 0.65);
 $Border2: gold;
 $Border3: rgba(28, 129, 183, 0.75);
@@ -12,5 +16,5 @@ $iconSingleCheck: url(../../Icons/done_white_24dp.svg);
 $iconStar: url(../../Icons/grade_white_24dp.svg);
 $iconMinimizer: url(../../Icons/maximize_white_24dp.svg);
 
-$font1: 'Open Sans', sans-serif;
-$font2: 'Roboto', sans-serif;
+$font1: 'Open Sans Condensed', sans-serif;
+$font2: 'Lato', sans-serif;
