--- a/scss/elements/_opening.scss
+++ b/scss/elements/_opening.scss
@@ -1,6 +1,4 @@
-@import "../seetings/mixins";
-@import "../seetings/fonts-colors-icons";
-@import "../structure/buttons";
+@import "../settings";
 
 .opening {
   display: flex;
@@ -18,22 +16,18 @@
   }
 
   &__header {
-    font-family: $font2;
+    font-family: $font1;
     font-size: 3.0625rem;
-    color: black;
   }
 
   &__heading {
     margin-top: 20px;
     margin-bottom: 38px;
-    font-size: 140%;
-    color: $MenuColor;
-    font-weight: 600;
+    font-size: 115%;
+
 
     @include mobile {
       padding: 0 70px;
-      font-weight: 500;
-      font-optical-sizing: auto;
     }
   }
 
@@ -53,7 +47,15 @@
       padding: 16px 60px;
       display: inline-flex;
 
+
     }
   }
+  //@include tablet {
+  //    .btn {
+  //      margin: 0 15px;
+  //      padding: 16px 50px;
+  //      display: inline-flex;
+  //    }
+  //}
 }
 
